--- a/index.html
+++ b/index.html
@@ -4,122 +4,187 @@
   <meta charset="utf-8" />
   <title>GM Ritual • On Base</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" href="data:," />
+
   <style>
     :root{
       --bg:#0f1115; --card:#161a22; --text:#e9eefb; --muted:#9aa4b2;
-      --blue:#2563eb; --purple:#7c3aed; --green:#16a34a; --red:#ef4444;
+      --blue:#2563eb; --purple:#7c3aed; --slate:#334155; 
+      --green:#16a34a; --red:#ef4444;
     }
+    *{box-sizing:border-box;font-family:Inter,system-ui,Arial}
     body{
       margin:0;background:linear-gradient(180deg,#0e1117,#0b1220 60%);
-      color:var(--text);font-family:Arial,system-ui;text-align:center;
+      color:var(--text);
     }
-    .wrap{max-width:880px;margin:48px auto;padding:0 16px;}
-    .card{background:#161a22;border-radius:16px;padding:22px;border:1px solid #1e2531;}
-    button{padding:14px 18px;border-radius:12px;font-size:16px;font-weight:600;
-      cursor:pointer;border:0;transition:.15s;}
-    .btn{min-width:220px;margin:6px;}
-    .primary{background:var(--blue);color:white;}
-    .danger{background:var(--red);color:white;}
-    .gm{background:#1d4ed8;color:white;}
-    .gn{background:#6d28d9;color:white;}
-    .sleep{background:#475569;color:#e2e8f0;}
-    .disabled{opacity:.45;pointer-events:none;}
-    .chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;
-      background:#0b1324;border-radius:12px;border:1px solid #1f2d44;}
+    .wrap{max-width:880px;margin:48px auto;padding:0 16px;text-align:center}
+    h1{font-size:38px;margin:0 0 6px}
+    .sub{color:var(--muted);margin-bottom:28px}
+
+    .card{
+      background:var(--card);
+      border:1px solid #1f2430;
+      border-radius:16px;
+      padding:24px;
+    }
+
+    .row{display:flex;gap:14px;flex-wrap:wrap;justify-content:center}
+    button{cursor:pointer;border:0;border-radius:12px;padding:14px 18px;font-weight:600;transition:.15s}
+    .btn{min-width:220px}
+    .primary{background:var(--blue);color:#fff}
+    .danger{background:var(--red);color:#fff}
+    .gm{background:#1d4ed8;color:#fff}
+    .gn{background:#6d28d9;color:#fff}
+    .sleep{background:#374151;color:#cbd5e1}
+    .disabled{opacity:.55;pointer-events:none}
+
+    .chip{
+      display:inline-flex;align-items:center;gap:8px;
+      background:#0b1324;border:1px solid #1f2a44;
+      color:#cfe0ff;padding:10px 12px;border-radius:12px;font-size:14px
+    }
+    .chip .dot{width:8px;height:8px;border-radius:999px;background:#16a34a;display:inline-block}
+    .foot{color:var(--muted);font-size:13px;margin-top:22px}
+    a.link{color:#7aa2ff;text-decoration:none}
   </style>
+
+  <!-- Ethers.js v5 (paling kompatibel semua dApp browser mobile) -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+
 </head>
-
 <body>
-<div class="wrap">
-  <h1>GM Ritual Dashboard ⚡</h1>
-  <p style="color:#9aa4b2">1 ritual per day • resets at 00:00 UTC</p>
+  <div class="wrap">
+    <h1>GM Ritual Dashboard ⚡</h1>
+    <div class="sub">Connect → Choose Ritual → Confirm TX (Base Chain 8453)</div>
 
-  <div class="card">
-    <button id="connectBtn" class="btn primary">Connect Wallet</button>
-    <button id="disconnectBtn" class="btn danger disabled">Disconnect</button>
+    <div class="card">
 
-    <div id="userBar" style="margin:15px 0;display:none;">
-      <span class="chip" id="addrChip">0x0000…0000</span>
+      <div class="row" style="margin-bottom:12px;">
+        <button id="connectBtn" class="btn primary">Connect Wallet</button>
+        <button id="disconnectBtn" class="btn danger disabled">Disconnect</button>
+      </div>
+
+      <div id="addrBar" style="margin:12px 0 18px;display:none;">
+        <span class="chip"><span class="dot"></span><span id="addrShort">0x…</span></span>
+      </div>
+
+      <div class="row" style="margin-top:4px;">
+        <button id="gmBtn" class="btn gm disabled">GM Ritual 🌞</button>
+        <button id="gnBtn" class="btn gn disabled">GN Ritual 🌙</button>
+        <button id="sleepBtn" class="btn sleep disabled">GoSleep 😴</button>
+      </div>
+
+      <div class="foot">
+        Want your own contract? <a class="link" href="/deploy">Deploy your contract 🚀</a>
+      </div>
     </div>
-
-    <button id="gmBtn" class="btn gm disabled">GM Ritual ⚡</button>
-    <button id="gnBtn" class="btn gn disabled">GN Ritual 🌙</button>
-    <button id="sleepBtn" class="btn sleep disabled">GoSleep 😴</button>
   </div>
-</div>
 
 <script>
 (() => {
-
+  // ====== CONFIG ======
   const CONTRACT = "0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A";
   const ABI = [
     "function performRitual(string calldata newMessage) external payable",
-    "function fee() view returns(uint256)"
+    "function fee() view returns (uint256)"
   ];
   const BASE_CHAIN = "0x2105";
 
-  let provider, signer, account;
-
-  const $ = (i) => document.getElementById(i);
+  // ===== UI helpers =======
+  const $ = (id)=>document.getElementById(id);
   const connectBtn = $("connectBtn");
   const disconnectBtn = $("disconnectBtn");
   const gmBtn = $("gmBtn");
   const gnBtn = $("gnBtn");
   const sleepBtn = $("sleepBtn");
-  const userBar = $("userBar");
-  const addrChip = $("addrChip");
+  const addrBar = $("addrBar");
+  const addrShort = $("addrShort");
 
-  function short(addr){ return addr.slice(0,6)+"…"+addr.slice(-4); }
+  let provider, signer, account;
 
-  function disableAllButtons(val){
-    gmBtn.classList.toggle("disabled", val);
-    gnBtn.classList.toggle("disabled", val);
-    sleepBtn.classList.toggle("disabled", val);
+  function short(a){return a?a.slice(0,6)+"…"+a.slice(-4):"";}
+  function setDisabled(el,bool){el.classList.toggle("disabled",bool);}
+
+  function showConnected(addr){
+    connectBtn.textContent="Connected ✅";
+    setDisabled(connectBtn,true);
+    setDisabled(disconnectBtn,false);
+    addrBar.style.display="block";
+    addrShort.textContent = short(addr);
+    refreshButtons();
   }
 
-  function updateUIConnected(){
-    connectBtn.classList.add("disabled");
-    disconnectBtn.classList.remove("disabled");
-    userBar.style.display = "block";
-    addrChip.textContent = short(account);
-
-    checkCooldown() ? disableAllButtons(true) : disableAllButtons(false);
+  function showDisconnected(){
+    connectBtn.textContent="Connect Wallet";
+    setDisabled(connectBtn,false);
+    setDisabled(disconnectBtn,true);
+    addrBar.style.display="none";
+    setDisabled(gmBtn,true);
+    setDisabled(gnBtn,true);
+    setDisabled(sleepBtn,true);
   }
 
-  function updateUIDisconnected(){
-    connectBtn.classList.remove("disabled");
-    disconnectBtn.classList.add("disabled");
-    userBar.style.display = "none";
-    disableAllButtons(true);
+  // ========= Cooldown (per tombol per hari) =========
+
+  function key(type){
+    return "cool_"+type+"_"+account;
   }
 
+  function checkCooldown(type){
+    if (!account) return true;
+    const saved = localStorage.getItem(key(type));
+    if (!saved) return false;
+    const today = new Date().toISOString().slice(0,10);
+    return saved === today;
+  }
+
+  function mark(type){
+    const today = new Date().toISOString().slice(0,10);
+    localStorage.setItem(key(type), today);
+  }
+
+  function refreshButtons(){
+    setDisabled(gmBtn, checkCooldown("GM"));
+    setDisabled(gnBtn, checkCooldown("GN"));
+    setDisabled(sleepBtn, checkCooldown("SLEEP"));
+  }
+
+  // ========= Chain switch ==========
   async function ensureBase(){
-    const eth = window.ethereum;
-    const cid = await eth.request({method:"eth_chainId"});
-    if (cid === BASE_CHAIN) return;
+    const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
+    if (!eth) throw new Error("No wallet detected. Please use MetaMask/OKX/Bitget dApp browser.");
+    const chainId = await eth.request({method:"eth_chainId"});
+    if (chainId === BASE_CHAIN) return;
+
+    // Try switch
     try {
-      await eth.request({ method:"wallet_switchEthereumChain", params:[{chainId:BASE_CHAIN}] });
+      await eth.request({
+        method:"wallet_switchEthereumChain",
+        params:[{chainId:BASE_CHAIN}]
+      });
     } catch(e){
-      if (e.code === 4902){
+      if (e.code===4902){
         await eth.request({
           method:"wallet_addEthereumChain",
           params:[{
-            chainId:BASE_CHAIN,
+            chainId: BASE_CHAIN,
             chainName:"Base",
             rpcUrls:["https://mainnet.base.org"],
             nativeCurrency:{name:"Base Ether",symbol:"ETH",decimals:18},
             blockExplorerUrls:["https://basescan.org"]
           }]
         });
-      } else throw e;
+      } else {
+        throw e;
+      }
     }
   }
 
+  // ========= Connect ==========
   async function connect(){
     try{
-      const eth = window.ethereum || window.okxwallet || (window.bitkeep && window.bitkeep.ethereum);
-      if (!eth){ alert("Wallet not detected"); return; }
+      const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
+      if (!eth){ alert("Wallet not detected. Use MetaMask/OKX/Bitget dApp browser."); return; }
 
       await ensureBase();
 
@@ -128,77 +193,63 @@
       signer = provider.getSigner();
       account = await signer.getAddress();
 
-      updateUIConnected();
+      showConnected(account);
 
-      eth.on("accountsChanged", (acc)=>{
-        if (!acc.length){ disconnect(); return; }
-        account = acc[0]; addrChip.textContent = short(account);
-        updateUIConnected();
+      eth.on?.("accountsChanged",(acc)=>{
+        if(!acc || acc.length===0){disconnect();return;}
+        account = acc[0];
+        addrShort.textContent = short(account);
+        refreshButtons();
       });
-
-      eth.on("chainChanged",(cid)=>{
-        if (cid !== BASE_CHAIN) disconnect();
+      eth.on?.("chainChanged",(c)=>{
+        if(c!==BASE_CHAIN){ showDisconnected(); }
       });
 
     }catch(e){
       console.error(e);
-      alert("Connection failed");
-      updateUIDisconnected();
+      showDisconnected();
+      alert("Connection failed ❌");
     }
   }
 
+  // ========= Disconnect ==========
   function disconnect(){
-    provider = null; signer = null; account = null;
-    updateUIDisconnected();
+    provider=null; signer=null; account=null;
+    showDisconnected();
   }
 
-  function cooldownKey(){ return "ritual_"+account; }
-
-  function checkCooldown(){
-    if (!account) return true;
-    const saved = localStorage.getItem(cooldownKey());
-    if (!saved) return false;
-    const today = new Date().toISOString().slice(0,10);
-    return saved === today;
-  }
-
-  function markCooldown(){
-    const today = new Date().toISOString().slice(0,10);
-    localStorage.setItem(cooldownKey(), today);
-  }
-
-  async function ritual(msg){
-    if (checkCooldown()){
-      alert("Already did ritual today ✅");
+  // ========= Ritual ==========
+  async function ritual(type,message){
+    if(checkCooldown(type)){
+      alert("You already did "+type+" today ✅");
       return;
     }
+
     try{
       await ensureBase();
       const c = new ethers.Contract(CONTRACT, ABI, signer);
       const fee = await c.fee();
-
-      const tx = await c.performRitual(msg, { value: fee });
-      alert("Waiting confirmation…");
+      const tx = await c.performRitual(message,{value:fee});
+      alert("TX sent… waiting confirmation");
       await tx.wait();
-
-      markCooldown();
-      disableAllButtons(true);
-      alert("Ritual completed ✅");
-
+      mark(type);
+      refreshButtons();
+      alert(type+" ritual complete ✅");
     }catch(err){
       console.error(err);
       alert("Ritual failed ❌");
     }
   }
 
+  // ===== Bind =======
   connectBtn.onclick = connect;
   disconnectBtn.onclick = disconnect;
-  gmBtn.onclick = () => ritual("GM ⚡");
-  gnBtn.onclick = () => ritual("GN 🌙");
-  sleepBtn.onclick = () => ritual("GoSleep 😴");
+  gmBtn.onclick = ()=>ritual("GM","GM ⚡");
+  gnBtn.onclick = ()=>ritual("GN","GN 🌙");
+  sleepBtn.onclick = ()=>ritual("SLEEP","GoSleep 😴");
 
-  updateUIDisconnected();
-
+  // initial
+  showDisconnected();
 })();
 </script>
 
