--- a/deploy.html
+++ b/deploy.html
@@ -2,111 +2,157 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Deploy GMbanditV2 • Base</title>
+  <title>Deploy • GMbandit</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body{margin:0;background:#0e1117;color:#e9eefb;font-family:Inter,system-ui,Arial}
-    .wrap{max-width:780px;margin:48px auto;padding:0 16px}
-    h1{margin:0 0 8px;font-size:34px}
-    .card{background:#111826;border:1px solid #1f2430;border-radius:16px;padding:20px}
-    label{display:block;margin:12px 0 6px;color:#9aa4b2}
-    input{width:100%;padding:12px;border-radius:10px;border:1px solid #283044;background:#0c1424;color:#e9eefb}
-    .row{display:flex;gap:12px;flex-wrap:wrap}
-    button{cursor:pointer;border:0;border-radius:12px;padding:14px 18px;font-weight:700}
-    .primary{background:#2563eb;color:#fff}
-    .ghost{background:#0d1320;color:#cbd5e1;border:1px solid #1e293b}
-    .muted{color:#9aa4b2}
-    .chip{display:inline-flex;gap:8px;background:#0b1324;border:1px solid #1f2a44;padding:10px 12px;border-radius:12px;font-size:14px}
+    body { font-family: Inter, system-ui, Arial; background:#0b1220; color:#e9eefb; margin:0; }
+    .wrap{max-width:900px;margin:48px auto;padding:20px;text-align:center}
+    .card{background:#0f1720;border:1px solid #1f2a44;border-radius:12px;padding:22px}
+    input,button,select{padding:12px;border-radius:8px;border:1px solid #283447;background: #071028;color:#e9eefb}
+    button{cursor:pointer;margin:8px}
+    .muted{color:#9aa4b2;font-size:13px}
+    .small{font-size:13px}
   </style>
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 </head>
 <body>
-<div class="wrap">
-  <h1>Deploy your GMbanditV2 Contract</h1>
-  <p class="muted">Connect → auto-fill Owner → set Collector → Deploy (Base Mainnet 8453).</p>
+  <div class="wrap">
+    <h1>Deploy GMbandit (via Factory)</h1>
+    <p class="muted">Owner will be set automatically to the wallet that clicks "Deploy". Collector is fixed to the project wallet (no input).</p>
 
-  <div class="card">
-    <div style="margin-bottom:12px;">
-      <button id="connectBtn" class="primary">Connect Wallet</button>
-      <span id="addrChip" class="chip" style="display:none;"></span>
-    </div>
+    <div class="card">
+      <div style="margin-bottom:12px;">
+        <button id="connectBtn">Connect Wallet</button>
+        <button id="disconnectBtn" disabled>Disconnect</button>
+      </div>
 
-    <label>Owner Address (auto)</label>
-    <input id="owner" placeholder="0x…" readonly />
+      <div style="margin:12px 0;">
+        <label class="small">Initial on-chain message</label><br/>
+        <input id="initialMsg" type="text" placeholder="GM Ritual Initiated" style="width:60%" />
+      </div>
 
-    <label>Collector Address</label>
-    <input id="collector" placeholder="0xCollector…" />
+      <!-- collector removed on purpose -->
+      <div style="margin:10px 0;" class="small muted">
+        Collector (fees) will be sent to: <span id="collectorAddr"></span>
+      </div>
 
-    <div style="margin-top:16px" class="row">
-      <button id="deployBtn" class="primary">Deploy Now 🚀</button>
-      <a href="/" class="ghost" style="text-decoration:none;display:inline-block;padding:14px 18px;">← Back to Dashboard</a>
+      <div style="margin-top:16px;">
+        <button id="deployBtn" disabled>Deploy GM Contract</button>
+      </div>
+
+      <div id="status" style="margin-top:14px;color:#cfe0ff"></div>
     </div>
   </div>
-</div>
 
 <script>
-(() => {
-  const BASE_CHAIN_ID_HEX = "0x2105"; // 8453
+(async ()=> {
+  // ====== CONFIG - EDIT THESE ======
+  const FACTORY_ADDRESS = "0xb9C0b964E223D0058cdFEB445B4506415117b055"; // <- replace with your Factory address
+  // Example ABI: change to your factory's real ABI and method name
+  const FACTORY_ABI = [
+    // example: factory.deployGM(string initialMessage, address collector) -> change to your actual function
+    "function createGM(string calldata initialMessage, address collector) payable returns (address)"
+  ];
+  const COLLECTOR_ADDRESS = "0x4AE70118DD2cB814404DaAA064daB470B7F76542"; // <- wallet utama, fixed (no form)
+
+  // ====== UI elements ======
   const connectBtn = document.getElementById("connectBtn");
-  const ownerInput = document.getElementById("owner");
-  const collectorInput = document.getElementById("collector");
+  const disconnectBtn = document.getElementById("disconnectBtn");
   const deployBtn = document.getElementById("deployBtn");
-  const addrChip = document.getElementById("addrChip");
+  const initialMsgInput = document.getElementById("initialMsg");
+  const statusEl = document.getElementById("status");
+  const collectorAddrEl = document.getElementById("collectorAddr");
+
+  collectorAddrEl.innerText = COLLECTOR_ADDRESS;
 
   let provider, signer, account;
 
-  async function ensureBase(){
-    const eth = window.ethereum || window.okxwallet || (window.bitkeep && window.bitkeep.ethereum) || window.bitgetwallet;
-    if (!eth) throw new Error("No wallet detected");
-    const current = eth.chainId || (await eth.request({method:"eth_chainId"}));
-    if (current === BASE_CHAIN_ID_HEX) return;
-    try{
-      await eth.request({method:"wallet_switchEthereumChain", params:[{chainId:BASE_CHAIN_ID_HEX}]});
-    }catch(err){
-      if (err && err.code===4902){
-        await eth.request({method:"wallet_addEthereumChain", params:[{
-          chainId:BASE_CHAIN_ID_HEX, chainName:"Base",
-          rpcUrls:["https://mainnet.base.org"],
-          nativeCurrency:{name:"Base Ether",symbol:"ETH",decimals:18},
-          blockExplorerUrls:["https://basescan.org"]
-        }]});
-      } else { throw err; }
+  function short(a){ return a ? a.slice(0,6) + "…" + a.slice(-4) : ""; }
+  function setStatus(s){ statusEl.textContent = s; }
+
+  // ===== ensure base chain =====
+  async function ensureBase(ethProvider){
+    const baseHex = "0x2105"; // 8453
+    try {
+      const chainId = await ethProvider.request({ method: "eth_chainId" });
+      if (chainId !== baseHex) {
+        try {
+          await ethProvider.request({ method: "wallet_switchEthereumChain", params:[{chainId: baseHex}] });
+        } catch(switchErr){
+          // add chain if missing
+          if (switchErr && switchErr.code === 4902) {
+            await ethProvider.request({
+              method: "wallet_addEthereumChain",
+              params: [{
+                chainId: baseHex,
+                chainName: "Base",
+                rpcUrls: ["https://mainnet.base.org"],
+                nativeCurrency: { name: "Base Ether", symbol: "ETH", decimals: 18 },
+                blockExplorerUrls: ["https://basescan.org"]
+              }]
+            });
+          } else {
+            throw switchErr;
+          }
+        }
+      }
+    } catch(e){
+      throw e;
     }
   }
 
-  async function connect(){
-    try{
-      const eth = window.ethereum || window.okxwallet || (window.bitkeep && window.bitkeep.ethereum) || window.bitgetwallet;
-      if (!eth){ alert("Open in MetaMask/OKX/Bitget dApp browser"); return; }
-      await ensureBase();
+  // ===== connect/disconnect =====
+  connectBtn.onclick = async () => {
+    try {
+      const eth = window.ethereum || window.okxwallet || window.bitgetwallet || (window.bitkeep && window.bitkeep.ethereum);
+      if (!eth) { alert("Open in MetaMask/OKX/Bitget dApp browser or use a browser with injected wallet."); return; }
+      await ensureBase(eth);
       provider = new ethers.providers.Web3Provider(eth, "any");
       await provider.send("eth_requestAccounts", []);
       signer = provider.getSigner();
       account = await signer.getAddress();
-      ownerInput.value = account;
-      addrChip.style.display = "inline-flex";
-      addrChip.textContent = account.slice(0,6)+"…"+account.slice(-4);
-      connectBtn.textContent = "Connected ✅";
+      connectBtn.innerText = "Connected: " + short(account);
       connectBtn.disabled = true;
-    }catch(e){
-      console.error(e); alert("Connection failed");
-    }
-  }
+      disconnectBtn.disabled = false;
+      deployBtn.disabled = false;
+      setStatus("Connected as " + account);
+      eth.on?.("accountsChanged", (acc)=>{
+        if(!acc || acc.length===0){ disconnect(); return; }
+        account = acc[0]; connectBtn.innerText = "Connected: " + short(account);
+      });
+    } catch(err){ console.error(err); alert("Connect failed"); setStatus("Connect failed"); }
+  };
 
-  // NOTE: ganti bytecode + ABI deploy sesuai Factory kamu jika nanti mau benar-benar deploy dari UI.
-  // Untuk saat ini tombol akan kasih alert info.
-  async function deployNow(){
-    if (!signer){ await connect(); }
-    const owner = ownerInput.value.trim();
-    const collector = collectorInput.value.trim();
-    if (!ethers.utils.isAddress(owner) || !ethers.utils.isAddress(collector)){
-      alert("Invalid owner/collector address"); return;
-    }
-    alert("UI deploy dummy dulu. (Backend/factory deploy bisa ditambah nanti)");
-  }
+  disconnectBtn.onclick = ()=>{ provider = null; signer = null; account = null; connectBtn.innerText = "Connect Wallet"; connectBtn.disabled = false; disconnectBtn.disabled = true; deployBtn.disabled = true; setStatus("Disconnected"); };
 
-  connectBtn.onclick = connect;
-  deployBtn.onclick = deployNow;
+  // ===== deploy via factory =====
+  deployBtn.onclick = async () => {
+    if (!signer) { alert("Connect wallet first"); return; }
+    const initialMsg = initialMsgInput.value.trim() || "GM Ritual Initiated";
+    setStatus("Preparing deploy...");
+
+    try {
+      // owner is the deployer (current signer address)
+      const owner = await signer.getAddress(); // auto-owner
+      const collector = COLLECTOR_ADDRESS;      // fixed collector
+
+      // Use your actual factory ABI & method name here.
+      // Example uses createGM(initialMessage, collector)
+      const factory = new ethers.Contract(FACTORY_ADDRESS, FACTORY_ABI, signer);
+
+      setStatus("Sending deploy tx (owner = " + short(owner) + ") ...");
+      // If your factory requires a fee, include { value: ... } as second param
+      const tx = await factory.createGM(initialMsg, collector /* , { value: ethers.utils.parseEther("0.00") } */);
+      setStatus("Tx sent: " + tx.hash + " — waiting confirmation...");
+      await tx.wait();
+      setStatus("Contract deployed via factory ✅ Tx: " + tx.hash);
+    } catch (err) {
+      console.error(err);
+      setStatus("Deploy failed: " + (err.message || err));
+      alert("Deploy error — open console for details");
+    }
+  };
+
 })();
 </script>
 </body>
