--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
 </head>
 <body>
   <div class="wrap">
+      <!-- ✅ BANNER -->
+  <img src="assets/gmbandit.jpg" alt="GMbandit Banner" style="max-width:100%;border-radius:12px;margin-bottom:12px" />
+
+  <!-- ✅ HUMOR TEXT -->
+  <div style="color:#9aa4b2;font-size:14px;margin-bottom:28px">
+    This ritual costs only <strong>0.00000033 ETH</strong>.<br/>
+    Cheaper than your morning coffee, but blessed by the onchain gods ⚡
+  </div>
     <h1>GM Ritual Dashboard ⚡</h1>
     <div class="sub">Connect → Choose Ritual → Confirm TX (Base Chain 8453)</div>
 
