--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
       --green:#16a34a; --red:#ef4444;
     }
     *{box-sizing:border-box;font-family:Inter,system-ui,Arial}
-    body{
-      margin:0;background:linear-gradient(180deg,#0e1117,#0b1220 60%);
-      color:var(--text);
+    body {
+  margin: 0;
+  background: linear-gradient(180deg, #1E3A8A 0%, #60A5FA 50%, #ffffff 100%);
+  color: var(--text);
     }
     .wrap{max-width:880px;margin:48px auto;padding:0 16px;text-align:center}
     h1{font-size:38px;margin:0 0 6px}
     .sub{color:var(--muted);margin-bottom:28px}
 
     .card{
-      background:var(--card);
-      border:1px solid #1f2430;
-      border-radius:16px;
-      padding:24px;
+      background: rgba(22, 26, 34, 0.85); /* semi transparan */
+      border: 1px solid #1f2430;
+      border-radius: 16px;
+      padding: 24px;
     }
 
     .row{display:flex;gap:14px;flex-wrap:wrap;justify-content:center}
