--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     }
     .wrap{max-width:880px;margin:48px auto;padding:0 16px;text-align:center}
     h1{font-size:38px;margin:0 0 6px}
-    .sub{color:var(--muted);margin-bottom:28px}
+    .sub {
+    color: #3b82f6;
+    margin-bottom: 28px;
+  }
 
     .card{
       background: rgba(22, 26, 34, 0.85); /* semi transparan */
@@ -59,11 +62,11 @@
   <img src="assets/gmbandit.jpg" alt="GMbandit Banner" style="max-width:100%;border-radius:12px;margin-bottom:12px" />
 
   <!-- ✅ HUMOR TEXT -->
-  <div style="color:#9aa4b2;font-size:14px;margin-bottom:28px">
-    This ritual costs only <strong>0.00000033 ETH</strong>.<br/>
-    Cheaper than your morning coffee, but blessed by the onchain gods ⚡
-  </div>
-    <h1>GM Ritual Dashboard ⚡</h1>
+  <div style="color:#1e3a8a;font-size:14px;margin-bottom:28px">
+     This ritual costs only <strong>0.00000033 ETH</strong>.<br/>
+     Cheaper than your morning coffee, but blessed by the onchain gods
+   </div>
+    <h1>GM Ritual Dashboard</h1>
     <div class="sub">Connect → Choose Ritual → Confirm TX (Base Chain 8453)</div>
 
     <div class="card">
