--- a/frame.html
+++ b/frame.html
@@ -1,16 +1,37 @@
 <!doctype html>
-<html>
-  <head>
-    <title>GMbandit Frame</title>
-    <meta property="og:title" content="GMbandit Ritual Frame" />
-    <meta name="fc:frame" content="vNext" />
-    <meta name="fc:frame:image" content="https://yourdomain/assets/gmbandit.jpg" />
-    <meta name="fc:frame:button:1" content="Do Ritual ⚡" />
-    <meta name="fc:frame:button:1:action" content="link" />
-    <meta name="fc:frame:button:1:target" content="https://gm-bandit.vercel.app/" />
-    <meta name="fc:frame:post_url" content="https://yourdomain/frame-handler" />
-  </head>
-  <body>
-    GM Ritual Frame for Warpcast.
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>GM Ritual Frame</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Perform your daily GM Ritual on Base — one tap, one tx, one vibe ⚡" />
+
+  <!-- ✅ Farcaster Frame Meta Tags -->
+  <meta name="fc:frame" content="vNext" />
+  <meta name="fc:frame:image" content="https://gm-bandit.vercel.app/assets/gmbandit.jpg" />
+  <meta name="fc:frame:button:1" content="Perform GM ⚡" />
+  <meta name="fc:frame:post_url" content="https://gm-bandit.vercel.app/" />
+
+  <style>
+    body {
+      background: #0f1115;
+      color: #e9eefb;
+      font-family: system-ui, sans-serif;
+      text-align: center;
+      padding: 60px 20px;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 12px;
+    }
+    h1 {
+      margin-top: 20px;
+      font-size: 24px;
+    }
+  </style>
+</head>
+<body>
+  <img src="https://gm-bandit.vercel.app/assets/gmbandit.jpg" alt="GM Ritual Banner" />
+  <h1>One GM. One Tap. One Ritual ⚡</h1>
+</body>
 </html>
