--- a/index.html
+++ b/index.html
@@ -265,5 +265,26 @@
 })();
 </script>
 
+<hr style="border: 0; border-top: 2px double #334155; margin: 40px 0;" />
+  
+<footer style="text-align:center; font-size:14px; color:#9aa4b2; padding-bottom:32px">
+  🟦 Built with love by <strong>Bandit Skuad</strong> <br/>
+  Contract: 
+  <a href="https://basescan.org/address/0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A" style="color:#7aa2ff" target="_blank">
+    Ritual Contract
+  </a> | 
+  <a href="https://basescan.org/address/0xb9C0b964E223D0058cdFEB445B4506415117b055" style="color:#7aa2ff" target="_blank">
+    Factory Contract
+  </a> <br/><br/>
+  
+  👉 Follow us: 
+  <a href="https://warpcast.com/banditi" target="_blank" style="color:#7aa2ff">Farcaster</a> • 
+  <a href="https://x.com/Alidepok1" target="_blank" style="color:#7aa2ff">X (Twitter)</a> • 
+  <a href="https://github.com/beny25/GMbandit" target="_blank" style="color:#7aa2ff">GitHub</a>
+  
+  <br/><br/>
+  <span style="font-size:12px;color:#5c677a;">© 2025 GMbandit on Base → Open Source & Ritual Ready</span>
+</footer>
+  
 </body>
 </html>
