ubah style .sub

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
     .wrap{max-width:880px;margin:48px auto;padding:0 16px;text-align:center}
     h1{font-size:38px;margin:0 0 6px}
     .sub {
-    color: #3b82f6;
-    margin-bottom: 28px;
-  }
+    font-size: 18px;
+    margin-top: 10px;
+    text-align: center;
+    color: #0A6CFF;
+    font-weight: 600;
+    text-shadow: 0 0 8px rgba(10,108,255,0.6);
+}
 
     .card{
       background: rgba(22, 26, 34, 0.85); /* semi transparan */
