--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     .wrap{max-width:880px;margin:48px auto;padding:0 16px;text-align:center}
     h1{font-size:38px;margin:0 0 6px}
     .sub {
-    color: #000;
+  color: #1f2937;
+  margin-bottom: 32px;
 }
 
     .card{
