Updated deploy tombol

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
       </div>
 
       <div class="foot">
-        Want your own contract? <a class="link" href="/deploy">Deploy your contract 🚀</a>
+        Want your own contract? <a class="link" onclick="alert('Deploy feature coming soon 🚧'); return false;">
+  Deploy (Coming Soon) 🚧
+</a>
       </div>
     </div>
   </div>
