--- a/Testwalletconnect.html
+++ b/Testwalletconnect.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>GMbandit • WalletConnect Test</title>
+  <title>GMbandit • WalletConnect v2 Test</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     body {
@@ -15,6 +15,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      text-align: center;
     }
     button {
       padding: 12px 24px;
@@ -27,49 +28,48 @@
       cursor: pointer;
       transition: 0.2s;
     }
-    button:hover {
-      background: #1e40af;
-    }
-    #address {
-      margin-top: 20px;
-      font-size: 15px;
-      color: #111827;
-      word-break: break-all;
-    }
+    button:hover { background: #1e40af; }
+    #address { margin-top: 20px; font-size: 15px; color: #111827; word-break: break-all; }
   </style>
 
-  <!-- WalletConnect v2 / Web3Modal -->
+  <!-- ✅ WalletConnect v2 global UMD -->
+  <script src="https://unpkg.com/@walletconnect/ethereum-provider@2.10.3/dist/index.umd.min.js"></script>
   <script src="https://unpkg.com/@walletconnect/modal@2.6.2/dist/index.umd.js"></script>
 </head>
 
 <body>
-  <h2>🔗 WalletConnect v2 Test — GMbandit</h2>
+  <h2>🔗 GMbandit WalletConnect v2 Test</h2>
   <button id="connectBtn">Connect Wallet</button>
   <div id="address"></div>
 
-  <script type="module">
-    import { EthereumProvider } from "https://unpkg.com/@walletconnect/ethereum-provider@2.10.3/dist/index.modern.js";
-
+  <script>
     const connectBtn = document.getElementById("connectBtn");
     const addressDiv = document.getElementById("address");
 
-    const provider = await EthereumProvider.init({
-      projectId: "5194488ab401df6dd9c95f1e360d29b4", // ✅ your projectId
-      chains: [8453], // Base Mainnet
-      showQrModal: true,
-      methods: ["eth_sendTransaction", "personal_sign", "eth_signTypedData"],
-    });
-
-    connectBtn.addEventListener("click", async () => {
+    (async () => {
       try {
-        await provider.connect();
-        const accounts = await provider.request({ method: "eth_accounts" });
-        addressDiv.textContent = `Connected: ${accounts[0]}`;
+        const provider = await window.WalletConnectEthereumProvider.init({
+          projectId: "5194488ab401df6dd9c95f1e360d29b4",
+          chains: [8453], // Base Mainnet
+          showQrModal: true,
+          methods: ["eth_sendTransaction", "personal_sign", "eth_signTypedData"],
+        });
+
+        connectBtn.onclick = async () => {
+          try {
+            await provider.connect();
+            const accounts = await provider.request({ method: "eth_accounts" });
+            addressDiv.textContent = `✅ Connected: ${accounts[0]}`;
+          } catch (err) {
+            console.error(err);
+            addressDiv.textContent = "❌ Connection failed.";
+          }
+        };
       } catch (err) {
-        console.error(err);
-        addressDiv.textContent = "❌ Connection failed.";
+        console.error("Init error:", err);
+        addressDiv.textContent = "⚠️ Init failed. Check console.";
       }
-    });
+    })();
   </script>
 </body>
 </html>
